--- a/5_XDress.ipynb
+++ b/5_XDress.ipynb
@@ -1,6 +1,5 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "codemirror_mode": {
     "name": "ipython",
@@ -11,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:e633764e3c0d80b257e25df6125cd9f7745600fbb47fe03ac6ae87fd8511fd95"
+  "signature": "sha256:c95a1b1dba643bfb3d385237bf6888083aaf444836b3c4114dec01acb93ad488"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,54 +18,38 @@
   {
    "cells": [
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {
-      "internals": {
-       "slide_helper": "subslide_end",
-       "slide_type": "subslide"
-      },
-      "slide_helper": "slide_end",
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
-     "outputs": []
-    },
-    {
      "cell_type": "heading",
      "level": 1,
      "metadata": {
       "internals": {
-       "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
-      "slide_helper": "subslide_end",
       "slideshow": {
        "slide_type": "slide"
       }
      },
      "source": [
-      "Outro"
+      "XDress"
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 2,
+     "cell_type": "markdown",
      "metadata": {
-      "internals": {
-       "slide_helper": "subslide_end",
-       "slide_type": "subslide"
-      },
-      "slide_helper": "subslide_end",
+      "internals": {},
       "slideshow": {
-       "slide_type": "subslide"
+       "slide_type": "notes"
       }
      },
      "source": [
-      "Outline"
+      "Derived from:\n",
+      "\n",
+      "<div style=\"text-align:center\"><h1>XDress - Idiomatic, Automatic Wrapper Generation</h1>\n",
+      "<div style=\"text-align:center\"><img style=\"margin:auto\" src=\"thief.jpg\" /></div>\n",
+      "<h2>Kitware</h2>\n",
+      "</div>\n",
+      "<div style=\"text-align:center\">Anthony Michael Scopatz</div>\n",
+      "<div style=\"text-align:center\">The University of Wisconsin-Madison, Numfocus</div>\n",
+      "<div style=\"text-align:center\">Clifton Park, August 20th, 2014</div>"
      ]
     },
     {
@@ -75,127 +58,405 @@
       "internals": {
        "slide_type": "subslide"
       },
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "1) Creating a reproducible computational environment with Docker.\n"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "internals": {},
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
-     "source": [
-      "2) Interactive analysis and literate programming with the IPython notebook."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "internals": {},
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
-     "source": [
-      "3) A brief survey of the fundamental scientific Python packages: numpy, matplotlib, scipy, sympy, pandas, nose."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "internals": {},
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
-     "source": [
-      "4) Writing efficient, compiled C/Python hybrid code with Cython."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "internals": {},
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
-     "source": [
-      "5) Wrapping C and C++ libraries in python with XDress."
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {
-      "internals": {},
       "slideshow": {
        "slide_type": "slide"
       }
      },
      "source": [
-      "About Me"
+      "## The Big Idea\n",
+      "\n",
+      "<br/><div style=\"text-align:center;\">At its core, xdress is a suite of code generation routines built on top of a dynamic type system.</div>"
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import ipywidgets"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "ImportError",
-       "evalue": "No module named ipywidgets",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-        "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-1-eda6eb64c72d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mipywidgets\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mImportError\u001b[0m: No module named ipywidgets"
-       ]
-      }
-     ],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
+     "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_number": 5
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "<div style=\"text-align:center;\">The interface that is created should be beautiful, or at least not ugly.</div>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 6,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "fragment"
       }
      },
      "source": [
-      "Credits"
+      "## Motivation\n",
+      "\n",
+      "* First class C++ support\n",
+      "* Deep access to the type system\n",
+      "* A multitude of target languages"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 6,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
-      "Many of the content provided here is borrowed directly from these outstanding series:\n",
+      "## What XDress Is"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 6
+      },
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
+     "source": [
+      "Created via [this link](http://interactive.blockdiag.com/?compression=deflate&src=eJyr5lJQUHIM8FRwy8xLSS1SUoguLqnMSVWwVUhJLM5ITYm1BioISCwqTi0qVtC1Q1UL5geHKIRlFmeW5EMFnPNTUhXcU_NSixKBYsVK1ly1AOqXHj4)."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 6
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "<div style=\"text-align:center;\"><img src=\"images/workflow.svg\" /></div>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 10,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "## What XDress Is Not\n",
       "\n",
-      "* [J.R. Johansson's Scientific Python Lectures](http://github.com/jrjohansson/scientific-python-lectures)\n",
-      "* [IPython Cookbook by Cyrille Rossant](https://ipython-books.github.io/cookbook/)\n",
-      "* [IPython Minibook by Cyrille Rossant](https://ipython-books.github.io/minibook/)\n",
+      "* **Parser**\n",
+      "* **Compiler**\n",
+      "* **Build System**"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 10,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "## Parsers\n",
       "\n",
-      "Thanks to the wonderful SciPy community!\n",
+      "Parsing is worse than hard, it is annoying!"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 12
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "XDress completely outsources the task of parsing source code to other projects. It mostly outsources the syntax tree too."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 13
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "Parses that XDress supports currently are:\n",
       "\n",
-      "<img src=\"images/scipy_world.jpg\" width=\"300\">\n"
+      "* pycparser, for pure C-code"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 14
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "* GCC-XML, for C++ code"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 15
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "* Clang 3.2+, for C and C++ code"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "This tactic of relying on external parsers enables flexibility w.r.t. the source language."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "## API Descriptions\n",
+      "\n",
+      "*So how do the API descriptions work?*"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 18
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "To keep them as a portable as possible, they are nothing fancy."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 19,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "In memory descriptions (*desc*) are just Python strings, ints, dicts, tuples, lists, and other built-in types.  They can easily be translated into a JSON format."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 19,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "## API Description Example\n",
+      "\n",
+      "Code is generated from descriptions of API elements to produce idomatic Python wrappers.\n",
+      "\n",
+      "```python\n",
+      "brienne_desc = {\n",
+      "    'name': 'Brienne',\n",
+      "    'parents': ['LordSelwyn'],\n",
+      "    'namespace': 'westeros',\n",
+      "    'attrs': {'moniker': 'str'},\n",
+      "    'methods': {\n",
+      "        ('Brienne',): None,\n",
+      "        ('Brienne', ('monkier', 'str', '\"Maid of Tarth\"')): None,\n",
+      "        ('~Brienne',): None, \n",
+      "        ('attack', ('person', ('char' '*'), ('weapon_id', 'i2', 1))): 'float32',\n",
+      "        },\n",
+      "    'docstrings': {\n",
+      "        'class': \"I am so tall!\",\n",
+      "        'attrs': {\n",
+      "            'monkier': 'extra name for character',\n",
+      "            },\n",
+      "        'methods': {\n",
+      "            'attack': \"Attack someone with a weapon and returns damage.\"\n",
+      "            },\n",
+      "        },\n",
+      "    'extra': {},\n",
+      "    }\n",
+      "```"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 21,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "They heavy lifting of the API decsriptions is done by the type system."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 21,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "## Code Generation \n",
+      "\n",
+      "After the AST has been turned into an API description, xdress can pass this to as many code generators as are supported."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "Currently there are three code generators."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 24
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "The primary one is called `cythongen` and targets Python via Cython."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 24
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Learn more!"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 24,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "* [XDress Sphinx Docs](http://xdress.org/)\n",
+      "* [XDress SciPy Presentation](https://www.youtube.com/watch?v=a4kqO1IBZ4U)"
      ]
     }
    ],
