--- a/1_Docker.ipynb
+++ b/1_Docker.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:1e5bd22f226daa0f052cecb1b5f52f203b830c8557345070b1a01b0694dc798d"
+  "signature": "sha256:9f338b2a2c8de72cc1215e4d14311c14c02cba679041f499132fddd3840f8f6d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -210,6 +210,19 @@
       "<img src=\"images/docker_vm.jpg\" width=\"600\">\n",
       "\n",
       "Docker works with images that **consume minimal disk space**, **versioned**, **archiveable**, and **shareable**. Executing applications in these images does not require dedicated resources and is high performance."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "In the `docker/src/itkka` directory is an example Docker image for reproducing [an article on PET image series kinetic analysis]( http://hdl.handle.net/10380/3469).\n",
+      "\n",
+      "<img src=\"images/itkka.jpg\">"
      ]
     },
     {
