--- a/0_Introduction.ipynb
+++ b/0_Introduction.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:b7e86d8739d4c8502166e5af021bffd457db0c46dac442952780f1789bcc0879"
+  "signature": "sha256:46f5725bb9ea494a05a359df01980d185c89c14c8edbdd05f5ba66dead5dfb6d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -57,7 +57,7 @@
       }
      },
      "source": [
-      "> 2014-11-12\n",
+      "> 2014-11-13\n",
       "\n",
       "> Matt McCormick <matt.mccormick@kitware.com>"
      ]
@@ -493,7 +493,7 @@
       "* [A Crash Course in Python for Scientists](http://nbviewer.ipython.org/gist/rpmuller/5920182) - by Rick Muller.\n",
       "* [J.R. Johansson's Scientific Python Lectures](http://github.com/jrjohansson/scientific-python-lectures) - Much of the content here is borrowed directly from this outstanding series.\n",
       "* [IPython Cookbook by Cyrille Rossant](https://ipython-books.github.io/cookbook/) - Much of the content here is borrowed directly from this outstanding series.\n",
-      "* [IPython Minibook by Cyrille Rossant](https://ipython-books.github.io/minibook/) - Much of the content here is borrowed directly from this outstanding series.\n",
+      "* [IPython Minibook by Cyrille Rossant](https://ipython-books.github.io/minibook/)\n",
       "* [A gallery of interesting IPython Notebooks](https://github.com/ipython/ipython/wiki/A-gallery-of-interesting-IPython-Notebooks) - various authors.\n",
       "* [IPython repository Notebooks](http://nbviewer.ipython.org/github/ipython/ipython/blob/2.x/examples/Index.ipynb) - Great examples and tutorials on how to use IPython, create interative notebook widgets, etc.\n"
      ]
