--- a/1_Docker.ipynb
+++ b/1_Docker.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:9f338b2a2c8de72cc1215e4d14311c14c02cba679041f499132fddd3840f8f6d"
+  "signature": "sha256:6fd45713bed841308d7d20f942fe36abe295acaad6ed6b0442f20d4888c4afcd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -209,7 +209,7 @@
      "source": [
       "<img src=\"images/docker_vm.jpg\" width=\"600\">\n",
       "\n",
-      "Docker works with images that **consume minimal disk space**, **versioned**, **archiveable**, and **shareable**. Executing applications in these images does not require dedicated resources and is high performance."
+      "Docker works with images that **consume minimal disk space**, **versioned**, **archiveable**, and **shareable**. Executing applications in these images does not require dedicated resources and is **high performance**."
      ]
     },
     {
@@ -220,7 +220,9 @@
       }
      },
      "source": [
-      "In the `docker/src/itkka` directory is an example Docker image for reproducing [an article on PET image series kinetic analysis]( http://hdl.handle.net/10380/3469).\n",
+      "In the `docker/src/itkka` directory is an example Docker image, also [available](https://registry.hub.docker.com/u/thewtex/itkka/) on [DockerHub](https://hub.docker.com/) for reproducing [an article on PET image series kinetic analysis]( http://hdl.handle.net/10380/3469).\n",
+      "\n",
+      "The requirements for reproducing this computational analysis, the Ubuntu 14.04 operating system, the GCC 4.8.2-19ubuntu1 compiler, and particular versions of the dependencies the Insight Toolkit (ITK), libxml, sundials, and Boost, are now runnable on any x86_64 operating system, archiveable, and shareable.\n",
       "\n",
       "<img src=\"images/itkka.jpg\">"
      ]
