--- a/4_Cython.ipynb
+++ b/4_Cython.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:2ce81f4fdf15ccbc9c61a27730be84768028cfe39bf99e591bd7e44bfccdd1c6"
+  "signature": "sha256:4ca38f4349a721d1d24ad06611e75bc6f48976a39b5f283301d1f97b7301bedc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1307,7 +1307,8 @@
      "source": [
       "* [Cython Sphinx Documentation](http://docs.cython.org/)\n",
       "* [Cython Wiki](https://github.com/cython/cython/wiki)\n",
-      "* [SciPy Conference Cython Tutorial](http://conference.scipy.org/scipy2013/tutorial_detail.php?id=105)"
+      "* [SciPy Conference Cython Tutorial](http://conference.scipy.org/scipy2013/tutorial_detail.php?id=105)\n",
+      "* [Building Cython Modules with CMake](https://github.com/thewtex/cython-cmake-example)"
      ]
     }
    ],
