--- a/5_XDress.ipynb
+++ b/5_XDress.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:c95a1b1dba643bfb3d385237bf6888083aaf444836b3c4114dec01acb93ad488"
+  "signature": "sha256:dac0e921d9adb851fcf5e7280b41486cbdc214727d9234580a3e553d0f06429d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -35,7 +35,10 @@
     {
      "cell_type": "markdown",
      "metadata": {
-      "internals": {},
+      "internals": {
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "notes"
       }
@@ -65,21 +68,23 @@
      "source": [
       "## The Big Idea\n",
       "\n",
-      "<br/><div style=\"text-align:center;\">At its core, xdress is a suite of code generation routines built on top of a dynamic type system.</div>"
+      "* Xdress is an idiomatic, automatic Python wrapping tool for C and C++ libraries.\n",
+      "\n",
+      "* At its core, xdress is a suite of code generation routines built on top of a dynamic type system."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
-       "frag_number": 5
+       "frag_number": 3
       },
       "slideshow": {
        "slide_type": "fragment"
       }
      },
      "source": [
-      "<div style=\"text-align:center;\">The interface that is created should be beautiful, or at least not ugly.</div>"
+      "* The interface that is created should be beautiful, or at least not ugly."
      ]
     },
     {
@@ -87,7 +92,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 6,
+       "frag_number": 4,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -108,7 +113,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 6,
+       "frag_number": 4,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -124,7 +129,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 6
+       "frag_number": 4
       },
       "slideshow": {
        "slide_type": "skip"
@@ -139,14 +144,14 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 6
+       "frag_number": 4
       },
       "slideshow": {
        "slide_type": "-"
       }
      },
      "source": [
-      "<div style=\"text-align:center;\"><img src=\"images/workflow.svg\" /></div>"
+      "<div style=\"text-align:center;\"><img src=\"images/workflow.svg\" width=\"1100\" /></div>"
      ]
     },
     {
@@ -154,7 +159,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 10,
+       "frag_number": 8,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -175,7 +180,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 10,
+       "frag_number": 8,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -193,7 +198,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 12
+       "frag_number": 10
       },
       "slideshow": {
        "slide_type": "fragment"
@@ -208,7 +213,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 13
+       "frag_number": 11
       },
       "slideshow": {
        "slide_type": "fragment"
@@ -225,7 +230,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 14
+       "frag_number": 12
       },
       "slideshow": {
        "slide_type": "fragment"
@@ -240,7 +245,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15
+       "frag_number": 13
       },
       "slideshow": {
        "slide_type": "fragment"
@@ -255,7 +260,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 16,
+       "frag_number": 14,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -272,7 +277,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 16,
+       "frag_number": 14,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -290,7 +295,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 18
+       "frag_number": 16
       },
       "slideshow": {
        "slide_type": "fragment"
@@ -305,7 +310,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 19,
+       "frag_number": 17,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -322,7 +327,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 19,
+       "frag_number": 17,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -365,7 +370,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 21,
+       "frag_number": 19,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -382,7 +387,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 21,
+       "frag_number": 19,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -392,7 +397,7 @@
      "source": [
       "## Code Generation \n",
       "\n",
-      "After the AST has been turned into an API description, xdress can pass this to as many code generators as are supported."
+      "After the AST has been turned into an API description, xdress can pass this the code generator."
      ]
     },
     {
@@ -400,23 +405,10 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 23
+       "frag_number": 22,
+       "slide_helper": "subslide_end"
       },
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
-     "source": [
-      "Currently there are three code generators."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "internals": {
-       "frag_helper": "fragment_end",
-       "frag_number": 24
-      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "fragment"
       }
@@ -431,7 +423,8 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 24
+       "frag_number": 22,
+       "slide_type": "subslide"
       },
       "slideshow": {
        "slide_type": "slide"
@@ -446,7 +439,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 24,
+       "frag_number": 22,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
